# bupt-project

./: README.md
2-B/计算机网络课程设计/: CMakeLists.txt  README.md
2-B/计算机网络课程设计/include/: args_handler.h  consts.h  dns_parser.h  file_reader.h  logs.h  mapping.h  network.h  structs.h
2-B/计算机网络课程设计/src/: args_handler.c  dns_parser.c  dnsrelay.c  file_reader.c  mapping.c  network.c
3-A/程序设计实践/DSL/backend/: .gitignore  CMakeLists.txt  Doxyfile  README.md
3-A/程序设计实践/DSL/backend/doc/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  index.js  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  (+18 more)
3-A/程序设计实践/DSL/backend/include/: argument_parser.hpp  ast.hpp  exception.hpp  interpreter.hpp  iwebsocketstream.hpp  iwebsocketstreamfactory.hpp  lexer.hpp  network.hpp  parser.hpp  printer.hpp  semantic_analysis.hpp  sqlite_interface.hpp  token.hpp  visitor.hpp  websocketstream.hpp  websocketstreamfactory.hpp
3-A/程序设计实践/DSL/backend/scripts/: sample  sample2
3-A/程序设计实践/DSL/backend/src/: argument_parser.cpp  ast.cpp  interpreter.cpp  lexer.cpp  main.cpp  network.cpp  parser.cpp  printer.cpp  semantic_analysis.cpp  sqlite_interface.cpp
3-A/程序设计实践/DSL/backend/test/: CMakeLists.txt  argument_parser.cpp  interpreter_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_analysis_test.cpp
3-B/编译原理与技术课程设计/compiler/: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  test_all_testcases_locally.sh  test_semantic_errors.sh
3-B/编译原理与技术课程设计/compiler/include/: ast.hpp  exception.hpp  generator.hpp  lexer.hpp  parser.hpp  parser_tester.hpp  printer.hpp  semantic_analyzer.hpp  symbol_table.hpp  token.hpp  utils.hpp  visitor.hpp
3-B/编译原理与技术课程设计/compiler/semantic_errors/: array_index_out_of_boundary.pas  redefined_constants.pas  redefined_functions.pas  redefined_variables.pas  repeated_parameters.pas  try_modify_constant.pas  undefined_array.pas  undefined_function.pas  undefined_variable.pas  use_parameter_out_of_function.pas  variable_out_of_function_scope.pas  variable_out_of_local_scope.pas
3-B/编译原理与技术课程设计/compiler/src/: ast.cpp  generator.cpp  lexer.cpp  main.cpp  main_submit.cpp  parser.cpp  parser_tester.cpp  printer.cpp  semantic_analyzer.cpp  symbol_table.cpp  utils.cpp
3-B/编译原理与技术课程设计/compiler/test/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  parser_test_supplement.cpp
(+789 files in other folders)
